[package]
name = "pulsar_test"
version = "0.1.0"
authors = ["BBrown <bryan.brown.22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
pulsar = "1.0"
serde_json = "1.0"